# axum-auth-server

./: .env  Cargo.toml  README.md
scripts/: axum_db.sql
src/: lib.rs  main.rs
src/base/: errors.rs
src/config/: mod.rs
src/db/: axredis.rs  mod.rs  mysql.rs
src/dtos/: user_dto.rs
src/handlers/: mod.rs  user_hander.rs
src/interceptor/: header_interceptor.rs  mod.rs
src/models/: auth.rs  user.rs
src/response/: mod.rs
src/router/: mod.rs
src/utils/: jwt.rs  mod.rs  rencrypt.rs  rtime.rs
