[package]
name = "axum_user_auth"
version = "0.1.0"
authors = ["summersnake"]
edition = "2021"

[dependencies]
askama = "0.11"
axum-macros = "0.3.4"
axum-extra = "0.5.0"
bcrypt = "0.10"
jsonwebtoken = "8.3.0"
thiserror = "1.0.36"
sqlx = { version = "0.6.1", features = [
  "runtime-tokio-rustls",
  "mysql",
  "decimal",
  "chrono",
] }
tokio = { version = "1.20.1", features = ["full"] }
axum = { version = "0.6.18", features = ["headers"]}
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.85"
chrono = { version = "0.4.22", features = ["serde"] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
dotenv = "0.15.0"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
rust_decimal = "1.26.1"
once_cell = "1.15.0"

[dependencies.redis]
git = "https://github.com/redis-rs/redis-rs.git"